Fixed screenshot form covering header

--- a/spice-up/assets/css/main.scss
+++ b/spice-up/assets/css/main.scss
@@ -133,7 +133,7 @@ div {
         box-shadow: 0px 0px 38px 3px rgba(0,0,0,0.75);
 
         @media #{$mobile} {
-          width: 130%;
+          width: 100%;
           align-self: baseline;
         }
     }
